--- a/src/components/HeroImage/HeroImage.module.css
+++ b/src/components/HeroImage/HeroImage.module.css
@@ -7,7 +7,7 @@
     position: relative;
     top: 0;
     left: 0;
-    z-index: -1;
+    /* z-index: -1; */
   }
 
   .BannerOverlay {
@@ -52,7 +52,8 @@
 
 .BannerOverlay {
   width: 100%;
-  height: auto;
+  object-fit: cover;
+  opacity: 0.8;
 }
 
 .Featured {
