--- a/src/components/Movies/Movie.module.css
+++ b/src/components/Movies/Movie.module.css
@@ -4,10 +4,11 @@
   border-radius: 4.5%;
   align-self: center;
   justify-self: center;
+  justify-items: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.45);
 }
 
 .ImageContainer {
   align-self: center;
-  justify-self: center;
+  justify-items: center;
 }
